[package]
name = "fdk"
version = "0.1.2"
authors = ["Dario Domizioli <dario.domizioli@gmail.com>"]
description = "Experimental Function Development Kit for the Fn Project serverless platform"
repository = "https://github.com/fnproject/fdk-rust"
keywords = ["Fn", "serverless", "FaaS"]
categories = ["web-programming", "development-tools"]
license = "Apache-2.0"

[badges]
maintenance = { status = "experimental" }

[dependencies]
hyper = "0.11"
futures = "0.1"
serde_json = "1.0"
uuid = { version = "0.4", features = ["v4"] }
