[package]
edition = "2018"
name = "fdk"
version = "2.0.0"
authors = ["Dario Domizioli <dario.domizioli@gmail.com>", "Gaurav Saini <hello@gauravsaini.dev>"]
description = "Function Development Kit for the Fn Project serverless platform"
repository = "https://github.com/fnproject/fdk-rust"
keywords = ["Fn", "serverless", "FaaS"]
categories = ["web-programming", "development-tools"]
license = "Apache-2.0"

[dependencies]
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1.6", features = ["net", "rt"] }
futures = "0.3"
object-pool = "0.5"
lazy_static = "1.4.0"
url = "2.2"
serde = { version = "1" }
serde_json = { version = "1" }
