[package]
name = "{FUNCTION_NAME}"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.6", features = ["macros", "rt-multi-thread"] }
serde = { version = "1", features = ["derive"] }
fdk = { version = ">=0.2.0" }
